# hb-pytorch

./: .flake8  .gitignore  .travis.yml  CMakeLists.txt  README.md  baseline-README.md  config-hb.py  cosim_tutorial.md  environment.mk  out.std  requirements.txt  run-hb-pytest.sh  setup.py  setup_cosim_build_env.sh  setup_emul_build_env.sh  setup_native_build_env.sh  setup_silicon_v0_build_env.sh  tmp.py  tutorial.md
.github/workflows/: lint.yml
aten/src/ATen/: CMakeLists.txt  Context.cpp  Context.h  Dispatch.h  HammerBladeGenerator.h  SparseTensorImpl.cpp  SparseTensorUtils.h  TensorUtils.cpp  TensorUtils.h  function_wrapper.py  gen.py  preprocess_declarations.py
brg_test/: test_hammerblade_device.py
c10/: CMakeLists.txt
c10/core/: ATenProfiler.cpp  ATenProfiler.h  Backend.h  CPUAllocator.cpp  CPUAllocator.h  Device.cpp  Device.h  DeviceType.cpp  DeviceType.h  TensorImpl.h  TensorOptions.h  TensorTypeId.cpp  TensorTypeId.h
c10/hammerblade/: CMakeLists.txt  HammerBladeAllocator.cpp  HammerBladeAllocator.h  HammerBladeDevice.cpp  HammerBladeDevice.h  HammerBladeException.h  HammerBladeFunctions.cpp  HammerBladeFunctions.h  HammerBladeMacros.h  HammerBladeProfiler.cpp  HammerBladeProfiler.h
c10/hammerblade/emul/: CMakeLists.txt  bsg_manycore.cpp  bsg_manycore.h  bsg_manycore_atomic.h  bsg_manycore_coordinate.h  bsg_manycore_cuda.cpp  bsg_manycore_cuda.h  bsg_manycore_eva.h  bsg_manycore_features.h  bsg_manycore_printing.h  bsg_set_tile_x_y.cpp  bsg_set_tile_x_y.h  bsg_tile_group_barrier.h  bsg_tile_group_barrier.hpp  emul_hb_device.cpp  emul_hb_device.h  kernel.h  kernel_jumpstarter.cpp  kernel_jumpstarter.h  kernel_log.cpp  kernel_log.h  kernel_logger.h  kernel_trampoline.cpp  kernel_trampoline.h  low_alloc.cpp  low_alloc.h
c10/hammerblade/impl/: HammerBladeGuardImpl.cpp  HammerBladeGuardImpl.h  hammerblade_cmake_macros.h.in
c10/macros/: Macros.h
c10/probe/: ATenProfiler.cpp  ATenProfiler.h  CMakeLists.txt  Chart.cpp  Chart.h  ExecutionTime.cpp  ExecutionTime.h  Fallback.cpp  Fallback.h  HBProfiler.cpp  HBProfiler.h  ProbeMacros.h  Route.cpp  Route.h  Unimplemented.cpp  Unimplemented.h
c10/probe/impl/: probe_cmake_macros.h.in
caffe2/: CMakeLists.txt
caffe2/python/trt/: test_trt.py
cmake/: BuildVariables.cmake  Codegen.cmake  Summary.cmake
fragments/: analysis.mk  functions.mk  machine.mk
fragments/host/: compile.mk  cosim.mk  link.mk  py_compile.mk  py_cosim.mk  py_link.mk
fragments/kernel/: compile.mk  cudalite.mk  link.mk  tools.mk
hammerblade/: environment.mk
hammerblade/fragments/: analysis.mk
hammerblade/fragments/host/: compile.mk  cosim.mk  link.mk  py_compile.mk  py_cosim.mk  py_link.mk
hammerblade/fragments/kernel/: compile.mk  cudalite.mk  link.mk  tools.mk
hammerblade/scripts/: actual_parser.py  compare_aten_op.py  process_CPU_stack.py  process_HB_stack.py  stack_parser.py  std_parser.py
hammerblade/scripts/line_trace/: README.md  compress_asm.py  compress_trace.py  line_trace.py  print_trace.py
hammerblade/scripts/tests/: add_chunk.stack  add_full.stack  add_manycore_stats  test_actual_parser.py  test_compare_aten_op.py  test_stack_parser.py  test_std_parser.py
hammerblade/torch/: .nfs00000000800fc813000ec376  LeNet_5.prune.only.fc.pth.tar  Makefile  cora_csr_float32.npz  dramsim3.json  dramsim3.txt  dramsim3epoch.json  hb_pytorch_link.ld  kernel.cpp  kernel_abs.cpp  kernel_add.cpp  kernel_addcdiv.cpp  kernel_addmm.cpp  kernel_asm5.txt  kernel_conv.cpp  kernel_coo_to_csr.cpp  kernel_dot.cpp  kernel_embedding_backward.cpp  kernel_floor.cpp  kernel_log.cpp  kernel_memcpy.cpp  kernel_mul_div.cpp  kernel_pooling.cpp  kernel_round.cpp  kernel_sigmoid.cpp  kernel_sparse_conv2d_specialize.cpp  kernel_sparse_conv2d_weight_stationary.cpp  kernel_sparse_dense_mm_with_sp.cpp  kernel_sqrt.cpp  kernel_threshold.cpp  kernel_vvadd.cpp  lgc_csr_float32.npz  microbenchmark_readme.txt  parallel_cosim.py  parallel_pytest_runner.py  pycosim.profile.sh  pycosim.saif.sh  pycosim.sh  pycosim.trace.sh  pycosim.wave.sh  (+11 more)
hb_device/: common.h
hb_device/torch/: Makefile  README.md  pytest_runner.py  python_tests.hpp  test_loader.cpp
scripts/model_zoo/: update-caffe2-models.py  update-models-from-caffe2.py
tools/autograd/: derivatives.yaml  gen_python_functions.py  gen_variable_type.py
tools/setup_helpers/: cmake.py  env.py
torch/: CMakeLists.txt  __init__.py  _tensor_str.py  aten_profiler.py  hb_profiler.py  storage.py
torch/csrc/: Module.cpp
torch/cuda/: __init__.py  _utils.py
torch/hammerblade/: __init__.py  _utils.py  kernel_logger.py  profiler.py
torch/hb_profiler/: __init__.py  chart.py  exec_time.py
torch/riscv/: kernel.dis  kernel_LossNLL.cpp  kernel_LossNLL.dis  kernel_LossNLL_backward.dis  kernel_abs.dis  kernel_add.cpp  kernel_add.dis  kernel_addcdiv.cpp  kernel_addcdiv.dis  kernel_addcmul.dis  kernel_addmm.cpp  kernel_addmm.dis  kernel_addmm_naive.dis  kernel_batch_norm.dis  kernel_bernoulli_scalar_.dis  kernel_ceil.cpp  kernel_ceil.dis  kernel_clamp.cpp  kernel_clamp.dis  kernel_common.dis  kernel_conv.dis  kernel_coo_to_csr.cpp  kernel_coo_to_csr.dis  kernel_copy_hb_to_hb.dis  kernel_dot.dis  kernel_dstmm.cpp  kernel_embedding_backward.dis  kernel_exp.cpp  kernel_exp.dis  kernel_eye.cpp  kernel_eye.dis  kernel_fill.cpp  kernel_fill.dis  kernel_floor.cpp  kernel_floor.dis  kernel_index_select.dis  kernel_log.dis  kernel_max.dis  kernel_mean.dis  kernel_memcpy.dis  (+34 more)
venv_pytorch/: pip-selfcheck.json
venv_pytorch/include/: lapack.f90  mkl.fi  mkl_blas.fi  mkl_cdft.f90  mkl_cluster_sparse_solver.fi  mkl_df.f90  mkl_dfti.f90  mkl_direct_call.fi  mkl_direct_call.h  mkl_dss.f90  mkl_dss.fi  mkl_lapack.fi  mkl_lapacke.h  mkl_pardiso.f90  mkl_pardiso.fi  mkl_poisson.f90  mkl_rci.f90  mkl_service.f90  mkl_service.fi  mkl_solvers_ee.f90  mkl_solvers_ee.fi  mkl_solvers_ee.h  mkl_sparse_handle.f90  mkl_sparse_qr.f90  mkl_sparse_qr.h  mkl_spblas.f90  mkl_spblas.h  mkl_trans.fi  mkl_trig_transforms.f90  mkl_version.h  mkl_vml.fi  mkl_vsl.f90  mkl_vsl.fi  mkl_vsl_functions.h  mkl_vsl_subroutine.fi
venv_pytorch/lib/: mkl_msg.cat
(+4911 files in other folders)
